[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Fonts/TextBold.tres" type="FontFile" id=1]
[ext_resource path="res://UI/Layers/LayerConfiguration/Misc/GeodataChooser.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Layers/LayerConfiguration/SpecificLayerUI/PathLayer.gd" type="Script" id=3]
[ext_resource path="res://Util/FileChooser.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Layers/LayerConfiguration/Misc/ProfileEditor/ProfileEditor.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Fonts/TextWarning.tres" type="FontFile" id=6]

[node name="PathLayer" type="HSplitContainer"]
offset_right = 1024.0
offset_bottom = 150.0
minimum_size = Vector2( 0, 150 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBox" type="VBoxContainer" parent="."]
offset_right = 224.0
offset_bottom = 375.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="LeftBox"]
offset_right = 224.0
offset_bottom = 50.0
minimum_size = Vector2( 0, 50 )

[node name="Title" type="Label" parent="LeftBox/Title"]
offset_right = 224.0
offset_bottom = 23.0
custom_fonts/font = ExtResource( 1 )
text = "Path3D-Layer"

[node name="HSeparator" type="HSeparator" parent="LeftBox/Title"]
offset_top = 31.0
offset_right = 224.0
offset_bottom = 39.0

[node name="Path3D-data" type="Label" parent="LeftBox"]
offset_top = 58.0
offset_right = 224.0
offset_bottom = 143.0
minimum_size = Vector2( 0, 85 )
text = "Path3D-data:"

[node name="PathGroundHeight" type="Label" parent="LeftBox"]
offset_top = 151.0
offset_right = 224.0
offset_bottom = 236.0
minimum_size = Vector2( 0, 85 )
text = "Path3D-ground-height: "

[node name="Profile" type="Label" parent="LeftBox"]
offset_top = 244.0
offset_right = 224.0
offset_bottom = 284.0
minimum_size = Vector2( 0, 40 )
text = "Profile:"

[node name="ProfileEditor" type="Label" parent="LeftBox"]
offset_top = 292.0
offset_right = 224.0
offset_bottom = 332.0
minimum_size = Vector2( 0, 40 )
text = "Profile-editor:"

[node name="RightBox" type="VBoxContainer" parent="."]
offset_left = 248.0
offset_right = 1024.0
offset_bottom = 375.0

[node name="Spacer" type="Control" parent="RightBox"]
offset_right = 776.0
offset_bottom = 50.0
minimum_size = Vector2( 0, 50 )

[node name="PathChooser" parent="RightBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 58.0
offset_right = 776.0
offset_bottom = 143.0
show_raster_layers = false

[node name="HeightChooser" parent="RightBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 151.0
offset_right = 776.0
offset_bottom = 236.0
show_feature_layer = false

[node name="ProfileChooser" parent="RightBox" instance=ExtResource( 4 )]
offset_top = 244.0
offset_right = 776.0
offset_bottom = 284.0
filters = PackedStringArray( "*.tscn" )

[node name="Button" type="Button" parent="RightBox"]
offset_top = 292.0
offset_right = 101.0
offset_bottom = 329.0
minimum_size = Vector2( 100, 0 )
size_flags_horizontal = 0
text = "Open..."

[node name="ProfileEditor" parent="RightBox/Button" instance=ExtResource( 5 )]
offset_left = -174.0
offset_top = -199.0
offset_right = 756.0
offset_bottom = 301.0

[node name="Warning" type="Label" parent="RightBox"]
offset_top = 337.0
offset_right = 776.0
offset_bottom = 375.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
